--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,11 @@
 heat dynamics, instead keep track of energy of thermalised electrons?
 ohmic transport
-automatic testing of stability with regards to discretisation settings: sliceLength and dt
+
+for thermal electrons:
+Both diffusion of mu and diffusion of heat influence the development of the temperature distribution
+In particular, it seems that mu diffusion seems to give a lower bound for the temperature conductivity:
+suppose a slice at index n is at low temperature and mu[n] = 0.
+An adjacent slice with larger mu causes an increase in mu[n], but if the heat conductivity is small, thermalEnergy[n]
+will stay roughly constant. therefore
+thermalEnergy / Ds = constant = 0.5 * mu^2 + alpha * kB^2 * Te^2
+an increase in the mu^2 term must cause a decrease in the Te^2 term, but this can not always occur since the term is > 0
